# practica2-edd-2024

./: README.md
VERSION 2/: CMakeLists.txt  main.cpp
VERSION 2/atributo/: Atributo.h
VERSION 2/contact-manager/: ContanctManager.cpp
VERSION 2/contactos/: amigosconarboles.dot  amigossinarboles.dot  todo.dot
VERSION 2/contactos/log-sistema/: log.txt
VERSION 2/control-archivo/: ControlArchivo.cpp  ControlArchivo.h
VERSION 2/control-data/: ControlDataInput.h
VERSION 2/funcionHash/: FuncionHash.cpp
VERSION 2/item-hash-table/: ItemHsAttributes.h  ItemHsGroup.cpp
VERSION 2/log/: ListLog.cpp
VERSION 2/menu/: Menu.cpp  Menu.h
VERSION 2/report/: Report.cpp  Report.h
VERSION 2/table-hash-attributes/: TableHashAttributes.cpp
VERSION 2/table-hash-gruoups/: TableHashGruoup.cpp
VERSION 2/tree/: ControladorArbol.h  Tree.cpp
gestor-de-contacots/: CMakeLists.txt  MakeFile  Makefile  graph.dot  main.cpp
gestor-de-contacots/amigos/: 1 amigos12-12-12.txt
gestor-de-contacots/atributo/: Atributo.cpp  Atributo.h
gestor-de-contacots/contact-manager/: ContanctManager.cpp  ContanctManager.h
gestor-de-contacots/contactos/: amigosconarboles.dot  amigossinarboles.dot  doctoresconarboles.dot  doctoressinarboles.dot  todo.dot
gestor-de-contacots/contactos/amigos/: 0 amigosCONTACT-FIELD.txt  1 amigos12-12-12.txt  2 amigos2-12-12.txt  3 amigos12-12-11.txt  3 amigosBasilio.txt  4 amigosPedro.txt  6 amigosluis1.txt
gestor-de-contacots/contactos/log-sistema/: log.txt
gestor-de-contacots/control-archivo/: ControlArchivo.cpp  ControlArchivo.h
gestor-de-contacots/control-data/: ControlDataInput.cpp  ControlDataInput.h
gestor-de-contacots/funcionHash/: FuncionHash.cpp  FuncionHash.h
gestor-de-contacots/item-hash-table/: ItemHsAttributes.cpp  ItemHsAttributes.h  ItemHsGroup.h
gestor-de-contacots/list/: List.cpp  List.h  Nodo.cpp  Nodo.h
gestor-de-contacots/log/: ListLog.h  Log.cpp  Log.h
gestor-de-contacots/menu/: Menu.cpp  menu.cpp  menu.h
gestor-de-contacots/redimensionar/: Arreglo.cpp  Arreglo.h
gestor-de-contacots/report/: Report.cpp  Report.h
gestor-de-contacots/table-hash-attributes/: TableHashAtributes.cpp  TableHashAtributes.h  TableHashAttributes.cpp  TableHashAttributes.h
gestor-de-contacots/table-hash-gruoups/: TableHashGruoup.cpp  TableHashGruoup.h
gestor-de-contacots/tree/: ControladorArbol.cpp  ControladorArbol.h  Tree.cpp  Tree.h
